# os_slab_vault

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
docs/: CI_AND_RELEASE.md  COOKBOOK.md  DESIGN.md  FAQ.md  HANDLES_AND_GENERATIONS.md  MANUAL.md  OVERVIEW_FOR_ALISIO85.md  SAFETY.md  SEMVER.md
src/: lib.rs  slab.rs
