[package]
name = "os_slab_vault"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["AI assistant (ChatGPT) based on an idea by alisio85"]
description = "Dependency-free, no_std generational slab/object-pool for Rust OS kernels."
readme = "README.md"
repository = "https://github.com/alisio85/os_slab_vault"
homepage = "https://github.com/alisio85/os_slab_vault"
documentation = "https://docs.rs/os_slab_vault"
keywords = ["os", "kernel", "no_std", "slab", "object-pool"]
categories = ["no-std", "embedded", "os", "data-structures"]

[features]
default = []
# Enables `std` only for host-side tests/examples. The core library remains `no_std`.
std = []

[dependencies]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "x86_64-unknown-none"]
rustdoc-args = ["-D", "warnings", "--cfg", "docsrs"]

